--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=automatos
 
-cors.originPatterns = http://localhost:3000,http://localhost:5173
+cors.originPatterns = http://localhost:5173
